Fixed/worked around problem with words on image being in wrong place on smaller devices
Changed javascript for menu button so that the text over the image is only displayed when the menu isn't displayed. Changed so that position relative is used for all widths.

--- a/PhotographyPortfolio/Assets/css/homePage.css
+++ b/PhotographyPortfolio/Assets/css/homePage.css
@@ -89,12 +89,8 @@
  	width: 100%;
 }
 
-
-@media only screen and (min-width: 1200px) { /* laptop/desktop - large width */
-
-	.homePage__hero {
-		position: relative;
-	}
+.homePage__hero {
+	position: relative;  /* this makes the words appear over the image correctly */
 }
 
 .homePage__heroImage {
